Adicionando arquivos do trabalho final

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header id="cabeçalho">
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./páginas/aorigem.html ">A origem</a></li>
                     <li><a href="./páginas/classico.html">Classico</a></li>
                     <li><a href="./páginas/shippuden.html">Shippuden</a></li>  
@@ -25,7 +25,68 @@
             </nav>
         </header>
         <main>
+            <h1 id="manual">Manual do Naruto</h1>
+            <p>Seja bem vindo ao Manual do Ninja Naruto! Antes de mais nada, quero dizer que é um prazer
+                te ter aqui conosco! Fico feliz por você ter saído nessa jornada, em busca de conhecimento 
+                e diversão.<br><br>Espero que você encontre o que procura!</p><br>
+                <img width="480px" height="270px" class="displayblock" src="./imagens/Naruto-erro-1º-episódio-capa-890x466.jpg">
+                <br><br>
 
+            <p>O Manual do Naruto conta com 10 páginas que te oferecem diferentes formas de aprendizado.
+                Nosso site possui uma vasta gama de recursos baseados no anime Naruto(acho que já deu pra
+                perceber, né?).<br>
+            </p>
+            <br>
+            <p>Aqui você encontrará resumos sobre o anime, conhecerá os personagens e poderá sentir um 
+                gostinho de como esse anime é espetacular. Além de textos didáticos sobre inspiração 
+                e persistência, você também encontrará jogos de altissíma qualidade que foram criados
+                para o seu entretenimento, e eu espero muito que eles te proporcionem um momento divertido
+                e prazeroso!
+            </p><br>
+            <img width="280px" height="270px" class="displayblock"  src="./imagens/gifff.webp">
+            <h2>Sumário</h2>
+            <a class="linkinterno" href="./páginas/aorigem.html"><p><span>A Origem -</span> Descubra como o artista Masashi
+                Kishimoto criou as primeiras páginas do anime,
+                de onde surgiu a ideia inicial, quais foram as suas inspirações, como foi o processo e criação
+                e como Dragon Ball influenciou essa obra de arte.</p></a><br>
+
+            <a class="linkinterno" href="./páginas/classico.html"><p><span>Clássico -</span> Encontre tudo o que você precisa saber para ser instigado a assistir 
+                (ou rever) esse super anime! Na plataforma Clássico você também poderá conhecer melhor os personagens. 
+                E sabe aquela dúvida comum que todos tem sobre a forma com que os ninjas correm? Pois é! Aqui você 
+                achará a formúla nada mágica para esse problema.</p></a><br>
+
+            <a class="linkinterno" href="./páginas/shippuden.html"><p><span>Shippuden-</span> Aprenda tudo sobre a melhor parte do anime (na minha opinião), conhecendo as novas 
+                histórias que vêm em seguida do Clássico! Neste momento Naruto está crescido, não só ele, mas todos os seus amigos.
+                Novas jornadas os esperam, novos jutsus e missões incríveis! Você não vai perder, né?</p></a><br>
+
+            <a class="linkinterno" href="./páginas/autor.html"><p><span>Autor - </span>Nessa aba você confere a vida de Masashi Kishimoto,
+                além de muitas curiosidades de sua jornada como mangaká!</p></a><br>
+
+            <a class="linkinterno" href="./páginas/trilhasonora.html"><p><span>Trilha Sonora - </span>Nesta página você poderá
+                navegar pelas músicas mais tocadas durante a temporada Clássico e Shippuden! As páginas ainda possuem músicas 
+                leves que te adentrará no mundo de Konoha.</p></a><br>
+
+            <a class="linkinterno" href="./páginas/curiosidades.html"><p><span>Curiosidades - </span>Há! Chega de aprender lendo textos
+                de forma estática! Aqui você jogará um jogo de verdadeiro ou falso e, o melhor! Poderá conferir as respostas corretas,
+                errando ou acertando. Não se esqueça de colocar quantas você acertou.</a><br><br>
+
+            <a class="linkinterno" href="./páginas/Moral.html"><span>Moral - </span>Aqui você vai conhecer um dos motivos que 
+                fazem com que muitas pessoas assistam e amem o anime. Ele não é somente fonte de diversão, como também de aprendizadoe
+                e emoção. Não perca!</p></a><br>
+
+            <a class="linkinterno" href="./páginas/produtos.html"><p><span>Shopping do Naruto - </span>Se você estava procurando
+                por produtos relacionados ao anime, chegou ao lugar certo! Aqui você navegará por roupas casuais à decorações
+                de festas! Aproveite as promoções!</p></a><br>
+
+            <a class="linkinterno" href="./páginas/Quiz.html"><p><span>Quiz - </span>Bem, você chegou onde eu queria. Você foi desafiado a jogar este quiz e 
+                não há desculpas quanto ao conteúdo pois você ja sabe, ou não... Eu te espero neste jogo de perguntas e respostas. Ah!
+                Não se esqueça de conferir quantos pontos você marcou ao final do game.</p></a>
+
+            <h2>E aí! Tá esperando o que? Agora que já conhece nosso site, está apto para embarcar nesta jornada. Te desejo boa sorte
+                e um grande abraço!
+            </h2><br>
+            <img width="480px" height="270px" class="displayblock" src="./imagens/narutinho_rq9u.1280.webp"><br><br>
+            <p>Feito por:  Maria Victória Magalhães de Miranda.</p>
         </main>
         <footer>
 
