--- a/páginas/autor.html
+++ b/páginas/autor.html
@@ -48,7 +48,7 @@
                 depressão e crise existencial, em que já não mais sabia por que era um mangaká. Foi 
                 então que ele começou a pesquisar sobre o significado dos mangás. Após um tempo, ele 
                 achou no fundo do seu armário uns desenhos que ele havia guardado, ele encontrou Naruto,
-                Sakura e Sasuke, e então, em 1999 nasceu Naruto.</p>
+                Sakura e Sasuke, e então, em 1999 nasceu Naruto.</p><br>
                 <img class="displayblock" width="600px" height="310px" src="../imagens/kishimoto.jpg">
             </div>
             <div>
@@ -59,7 +59,7 @@
                 mundo afora.<br><br>Um sucesso que influenciou e influencia ainda hoje gerações. Não
                 só no Japão, mas no mundo inteiro, e não só por causa de sua temática, mas também por
                 sua história comovente e seus dramas muito bem desenvolvidos, além de várias lições 
-                que é obra passa. Não é a toa que tem o sucesso e a fama que lhe precede.</p>
+                que é obra passa. Não é a toa que tem o sucesso e a fama que lhe precede.</p><br>
                 <img class="displayblock" width="340px" height="500px" src="../imagens/narutoautor.jpg">
             </div>
             <div>
@@ -69,8 +69,9 @@
                 vício por Ramen. Inclusive os momentos difícieis pelos quais Naruto passa, representam o
                 momento de rejeição das editoras pelo trabalho de Kishimoto.<br><br>
                 Pode não parecer, mas já se foram 11 anos da vida de Kishimoto trabalhando em Naruto,
-                então fica mais óbvio ainda que Naruto conta uma grande parte de sua história.</p>
+                então fica mais óbvio ainda que Naruto conta uma grande parte de sua história.</p><br>
                 <img class="displayblock" width="640px" height="360px" src="../imagens/Naruto-ramen-1280x720.jpg">
+                <br><br>
             </div>
         </main>
         <footer>
