--- a/páginas/classico.html
+++ b/páginas/classico.html
@@ -26,17 +26,23 @@
         <main>
             <h1>Naruto Clássico</h1>
             <section>
+                <h2>Sumário</h2>
+                <a class="linkinterno" href="#conheça"><p>Resumo sobre as temporadas.............................</p></a>
+                <a class="linkinterno" href="#persona"><p>Resumo sobre os 7 personagens principais.....</p></a>
+                <a class="linkinterno" href="#correr"><p>Aprenda a correr igual ao Naruto.....................</p></a>
+            </section>
+            <section>
                 <h2>Sinopse</h2>
                 <p>Naruto é um jovem órfão habitante da Vila da Folha (Konoha) que sonha se tornar o quinto Hokage, o maior 
                 guerreiro e governante da vila. Ao se graduar como ninja, descobre que tem um demônio raposa selado 
                 dentro de si. Seu pai, o quarto Hokage, aprisionou a raposa no próprio filho quando ela ameaçava
                 destruir a Vila da Folha, sacrificando assim a própria vida. Agora Naruto vai contar com a ajuda dos 
                 amigos Sakura e Sasuke e do seu sensei, Kakashi Hatake, para perseguir seu sonho e deter os 
-                ninjas que planejam fazer mal á vila de Konoha.</p>
+                ninjas que planejam fazer mal á vila de Konoha.</p><br>
                 <img class="displayblock" width="562px" height="461.5px" src="../imagens/equipe7.png">
             </section>
             <section>
-                <h2>Conheça um pouco sobre Naruto Clássico...</h2>
+                <a id="conheça"><h2>Conheça um pouco sobre Naruto Clássico...</h2></a>
                 <p>Aqui abaixo colocarei um pequeno resumo sobre as <span>Quatro Primeiras Temporadas</span> do Clássico,
                 e acredito que, conhecendo um pouco dessa história, ninguém resiste a não saber mais e assistir a esse 
                 <span>íncrivel anime</span> que é <span>inspiração</span> para muitos e causa nos telespectadores todos os 
@@ -53,7 +59,7 @@
                 de 9 caudas. Depois vemos Naruto pintando a escultura dos Hokages e sendo perseguido pelo Iruka sensei, 
                 o que define o Naruto como palhaço da academia e como um garoto que clama por atenção, o que não é 
                 surpresa, já que ele é menosprezado e discriminado por todos da vila.</p>
-                <img class="displayblock" src="../imagens/primeiratempo.jpg">
+                <img class="displayblock" src="../imagens/primeiratempo.jpg"><br>
                 <p>Não demora muito para Naruto conseguir sua bandana da Folha e se formar na academia, formando uma
                 equipe com seu rival Sasuke, o último ninja do clã Uchiha e o mais admirado pelas garotas, e com sua
                 crush Sakura, que o acha ridículo e é apaixonada por Sasuke.</p>
@@ -62,7 +68,7 @@
                 nos emocionamos muito.
                 </p>
                 <img class="displayblock" src="../imagens/primeiratemp.jpg">
-                <p>
+                <p><br>
                 Na primeira temporada a prova chunin começa, e daí conhecemos vários outros 
                 personagens, como Rock Lee, Guy Sensei, Gaara da vila da Areia e muitos outros de várias aldeias diferentes,
                 já que o Exame Chunin reúne ninjas que passam por uma série de testes que genins precisam fazer para se 
@@ -73,13 +79,13 @@
                 <p>Com <span>26 episódios</span>, a segunda temporada nos mostra a continuação da <span>Prova Chunin</span>. Começa falando
                 sobre a floresta da morte, onde cada equipe deve pegar um pergaminho da terra (se a equipe ja portar o do céu) 
                 ou do céu (se a equipe ja portar o da terra), ou seja, cada equipe deve ter um par de pergaminhos (um do céu e 
-                outro da terra) , e nao deve abrir até chegar na torre.</p>
-                <img class="displayblock" src="../imagens/segundatempo.jpg">
+                outro da terra) , e nao deve abrir até chegar na torre.</p><br>
+                <img class="displayblock" src="../imagens/segundatempo.jpg"><br>
                 <p>Na floresta, a <span>equipe 7</span> (Naruto, Sakura e Sasuke) encaram muitos problemas, já que Orochimaru, um dos 
                 <a class="links" href="#sannins">três Sannins Lendários</a>, está atrás de Sasuke e começa a por o seu plano em ação. Nessa luta,Orochimaru deixa sua
                 marca (Marca da Maldição) no Sasuke, o que atrapalha o time durante a prova, já que a marca altera a força e o 
-                controle de sasuke sobre seu chackra.</p>
-                <img class="imagem" src="../imagens/segundatemp.jpeg">
+                controle de sasuke sobre seu chackra.</p><br>
+                <img class="imagem" src="../imagens/segundatemp.jpeg"><br>
                 <p>A equipe luta contra equipes de outras aldeias e acabam encontrando Kabuto (um servo fiel de Orochimaru 
                 disfarçado como um participante da prova), que os ajuda a concluir a prova. Ao concluir a prova e abrir os 
                 pergaminhos, são levados a uma sala onde estão todos os aprovados. Como os aprovados eram muitos, tiveram de
@@ -96,7 +102,7 @@
                 sede e começa a treinar Naruto que até assina um contrato para que possa realizar invocações. Com isso, um 
                 treinamento duro começa e Naruto apelida Jiraya de Sábio Tarado, já que este ia contra os três príncipios ninja: 
                 <span>dinheiro, bebida e mulheres</span>.</p>
-                <img class="displayblock" src="../imagens/terceiratemp.png">
+                <img class="displayblock" src="../imagens/terceiratemp.png"><br>
                 <p>O dia da prova Chunin chega. Naruto luta contra Neji Hyuuga, e ganha a luta, se esforçando e mostrando o seu 
                 verdadeiro jeito ninja de ser: não desistir e não voltar atrás em suas promessas. Verdades sobre o clã Hyuuga 
                 vem a tona e Naruto ensina uma lição valiosa á Neji. Sasuke batalha contra Gaara, mas sua luta não termina. Orochimaru,
@@ -104,7 +110,7 @@
                 Orochimaru luta contra Sarutobi, mesmo assasinando-o perde os movimentos de seus braços na batalha. Como a aldeia 
                 da Areia havia tramado junto com Orochimaru, Gaara luta contra a equipe 7, e Naruto ganha a luta de uma forma 
                 sensacional, que impressiona Sasuke. Além de perder, Gaara aprende uma lição valiosa com Naruto: <span>que a força 
-                não vêm da solidão, e sim da vontade de proteger seus companheiros.</span></p>
+                não vêm da solidão, e sim da vontade de proteger seus companheiros.</span></p><br>
                 <img class="displayblock" width="512px" height="269px" src="../imagens/terceiratempo.jpg">
             </section>
             <section>
@@ -114,18 +120,18 @@
                 Jiraya e Naruto saem em busca de Tsunade, uma dos 3 Sannins Lendários, a fim de convencê-la a se tornar Hokage da
                 Folha. Itachi  e Kisame não perdem tempo e vão atrás de Naruto (os dois fazem parte da Akatsuki, um grupo de vilões que estão atrás
                 das bestas de caudas). Durante os acontecimentos, Sasuke confronta Itachi e Jiraya salva Naruto da dupla. No caminho pela
-                busca por Tsunade, Jiraya treina Naruto, que se esforça muito.</p>
-                <img class="displayblock" src="../imagens/quartatempo.jpg">
+                busca por Tsunade, Jiraya treina Naruto, que se esforça muito.</p><br>
+                <img class="displayblock" src="../imagens/quartatempo.jpg"><br>
                 <p>Tsunade, Jiraya, Naruto e a aluna de Tsunade (Shizune), lutam contra Orochimaru e Kabuto. Após ganharem, os 4 se dirigem
                 até a Folha para Tsunade curar Lee e Sasuke e se tornar Hokage. Tsunade se impressiona muito com Naruto e cria uma
                 amizade diferente com ele (passível de luta e muito carinho). A nova Hokage dá de presente um colar que reprime a 
                 raposa de nove caudas e que ganhou de avó (o primeiro Hokage), e que passou por outros dois garotos no passado de
-                Tsunade, que possuíam em comum com Naruto, <span>o sonho de se tornar Hokage</span>.
+                Tsunade, que possuíam em comum com Naruto, <span>o sonho de se tornar Hokage</span>.<br><br>
                 <img class="displayblock" width="640px" height="360px" src="../imagens/quartatemp.jpg">
-                </p>
+                </p><br><br>
             </section>
             <section>
-                <h2>Personagens</h2>
+                <a id="persona"><h2>Personagens</h2></a>
                 <div id="font-size">
                 <p>Se voce chegou até aqui acredito que se interessou pelo anime e queira saber mais. Então se liga nesse 
                 super resumo sobre os 7 personagens mais importantes do Naruto Clássico e aproveite para conhecer seus 
@@ -133,10 +139,10 @@
                 </p>
                 <img class="displayblock" width="400px" height="224px" src="../imagens/giphycorra.webp">
                 <p id="coment" >Vai poder, inclusive, entender esse meme e aprender a correr como esse ícone aí do giphy.</p>
-                </div>
+                </div><br><br>
                 <div>
                     <h3>Naruto Uzumaki</h3>
-                    <img class="imagem" src="../imagens/narutoo.jpg" >
+                    <img class="imgss" src="../imagens/narutoo.jpg" >
                     <h4>Vila: Vila Oculta da Folha</h4>
                     <p>Ainda criança, Naruto se tornou um <span>jinchūriki</span>, nome que se dá aos humanos que têm bestas de caudas seladas
                     dentro deles. Portador de Kurama, a <span>Raposa de Nove-Caudas</span> que um dia atacou Konoha, o menino acabou sendo 
@@ -154,7 +160,7 @@
                 </div>
                 <div>
                     <h3>Sasuke Uchiha</h3>
-                    <img class="displayblock" src="../imagens/sasuke.jpg">
+                    <img class="imgss" src="../imagens/sasuke.jpg">
                     <h4>Vila: Vila Oculta da Folha</h4>
                     <p>O jovem Sasuke tem um passado trágico, sendo um dos únicos sobreviventes do massacre que seu irmão mais velho,
                     Itachi, fez com toda sua família. Almeja se tornar um shinobi (ninja) com a intenção de um dia ser forte o 
@@ -173,7 +179,7 @@
                 </div>
                 <div>
                     <h3>Sakura Haruno</h3>
-                    <img class="displayblock" width="472.5px" height="358.5px" src="../imagens/sakura.png">
+                    <img class="imgss" width="472.5px" height="358.5px" src="../imagens/sakura.png">
                     <h4>Vila: Vila Oculta da Folha</h4>
                     <p>Sakura era uma criança insegura, algo que mudou após conhecer Ino e se tornar amiga da jovem. Embora se 
                     destacasse como uma estudante exemplar e extremamente inteligente na Academia, por vezes deixou seu interesse
@@ -191,7 +197,7 @@
                 </div>
                 <div>
                     <h3>Kakashi Hatake</h3>
-                    <img class="displayblock" src="../imagens/kakashi.jpg">
+                    <img class="imgss" src="../imagens/kakashi.jpg">
                     <h4>Vila: Vila Oculta da Folha</h4>
                     <p>Teve uma vida marcada por perdas, incluindo a morte de seu pai e de seus 
                     amigos próximos Rin e Obito Uchiha, mas mesmo assim Kakashi cresceu como um
@@ -209,7 +215,7 @@
                 </div>
                 <div>
                     <h3>Tsunade</h3>
-                    <img class="displayblock" width="640.5px" height="440px" src="../imagens/Tsunade.png" >
+                    <img class="imgss" width="640.5px" height="440px" src="../imagens/Tsunade.png" ><br>
                     <h4>Vila: Vila Oculta da Folha</h4>
                     <p>Denominada a Quinta Hokage, demonstra grande lealdade a sua aldeia, chegando até mesmo a
                     dividir seu chakra para salvar a vida de milhares de pessoas em Konoha durante grandes ataques.Ela, 
@@ -229,7 +235,7 @@
                 </div>
                 <div>
                     <h3>Jiraya</h3>
-                    <img class="displayblock"  src="../imagens/jiraya.jpg">
+                    <img class="imgss" src="../imagens/jiraya.jpg"><br>
                     <h4>Vila: Vila Oculta da Folha</h4>
                     <p>Um dos integrantes dos Três Ninjas Lendários, Jiraya é um dos maiores
                     guerreiros de Konoha, mas também ficou conhecido por seu jeito pervertido, 
@@ -250,7 +256,7 @@
                 </div>
                 <div>
                     <h3>Orochimaru</h3>
-                    <img class="displayblock" src="../imagens/orochimaru.jpg" >
+                    <img class="imgss" src="../imagens/orochimaru.jpg" ><br>
                     <h4>Vila: Vila Oculta da Folha</h4>
                     <p>Com uma mente distorcida desde jovem, Orochimaru reagiu ao trauma de perder 
                     pessoas próximas desdenhando da fragilidade da vida humana. Por esse motivo, 
@@ -271,9 +277,9 @@
                     ponto de ele conseguir transformar seu corpo em uma espécie de cobra gigante formada 
                     por cobras menores.</p>
                 </div>
-            </section>
+            </section><br>
             <section>
-                <h1 class="corra">Como correr igual ao Naruto e outros ninjas!</h1>
+                <a id="correr"><h1 class="corra">Como correr igual ao Naruto e outros ninjas!</h1></a>
                 <h2>1° Passo</h2>
                 <p>Você deve estar com roupas confortáveis e que facilitem o deslocamento. Lembre-se: 
                 este passo é muito importante para que você execute as outras partes com a maestria de 
@@ -284,7 +290,7 @@
                 Se a superfície que você está for no mar ou rio, por exemplo, concentre o seu chacka nos pés e logo
                 após isso, somente depois disso, lance os seus braços para trás.<br><br> Seus braços devem estar em 
                 uma posição confortável, com as mãos em direção ao céu ou para trás.
-                </p>
+                </p><br>
                 <img class="imagem" src="../imagens/naruto-run-jordan.jpg">
                 <h2>3° Passo</h2>
                 <p>Como terceiro e último passo, agora você está pronto para correr. Movimente os seus pés para 
