--- a/páginas/curiosidades.html
+++ b/páginas/curiosidades.html
@@ -26,11 +26,9 @@
             </nav>
         </header>
         <main>
-            <input type="text" placeholder="Digite o seu nome..." id="usuario">
-            <button type="button" id="botaao" onclick="clicar()">Ok</button>
-            <h1 id="meuh1"></h1>
-
-            <div id="minhadiv">
+            <h1>Curiosidades</h1>
+            <h2 id="alinha">E aí, tá pronto pra um joguinho? Neste pequeno teste você deve julgar se cada pergunta afirma uma verdade ou uma mentira. Acertando ou errando você também estará aprendendo :)<br> <br>Boa sorte!
+            </h2>
             <section id="sec1">
                 <p class="meup">1 - Naruto Uzumaki tanto na versão original (japonês) quanto na brasileira, é dublado por mulheres.<br> Verdadeiro ou falso?</p>
                 <br><br>
@@ -92,9 +90,14 @@
                 <br><br>
                 <button type="button" class="botaaao" id="verdade8" onclick="verdade8()">Verdadeiro</button>
                 <button type="button" class="botaaao" id="falso8" onclick="falso8()">Falso</button>
-                <br>
+                <br><br>
             </section>
-        </div>
+        
+            <h2 id="anima">Se auto avalie aqui!</h2><br>
+            <p class="meup">Coloque a quantidade de acertos que você obteve e veja se mandou bem!</p>
+            <input type="number" id="num">
+            <button type="button" id="botaao" onclick="clicar()">OK</button>
+            <h3 id="meuh3"></h3>
         </main>
         <footer>
             
