--- a/páginas/quiz/Pontuação.html
+++ b/páginas/quiz/Pontuação.html
@@ -2,17 +2,74 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Quiz</title>
+        <title>Pontuação</title>
+        <link rel="icon" href="../../imagens/naruto.1.jpg">
         <link rel="stylesheet" href="../quiz.css">
+        <link rel="stylesheet" href="./jogo.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
         <script src="../quiz.js"></script>
     </head>
     <body>
-        <div>
-            <h1>Calcule a sua Pontuação</h>
-            <div>
-                
-            </div>
+        
+            <button class="pontus"><h1 id="pontos">Calcule a sua Pontuação</h1></button>
+        <div id="divona">
+            <table border="5" cellspacing="10rem">
+                <thead>
+                <tr>
+                    <th>&nbsp;</th>
+                    <th>Respostas</th>
+                    <th>Pontos</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                    </tr>
+                <tr>
+                    <td>1</td>
+                    <td>A- Laranja<br> e preto</td>
+                    <td>10</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>D- Sasuke</td>
+                    <td>30</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>C- Kyuubi</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>B- Nuvens<br> vermelhas</td>
+                    <td>20</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>C- Sasori<br>e Deidara</td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>B- Hidan</td>
+                    <td>10</td>
+                </tr>
+                <tr>
+                    <td colspan="3"></td>
+                </tr>
+                <tr>
+                    <th  colspan="2">Total</th>
+                    <th>100</th>
+                </tr>
+            </tbody>
+            </table>
         </div>
+        <br><br><br>
+        <div class="opções">
+            <a href="./pergunta1.html" class="jogar">Jogar Novamente</a>
+            <a href="../Quiz.html" class="Home">Voltar ao Home</a>
+        </div>
+        <br><br>
     </body>
 </html>
