--- a/páginas/quiz/fim.html
+++ b/páginas/quiz/fim.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Quiz</title>
+        <link rel="icon" href="../../imagens/naruto.1.jpg">
         <link rel="stylesheet" href="../quiz.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
         <script src="../quiz.js"></script>
