--- a/páginas/quiz/pergunta1.html
+++ b/páginas/quiz/pergunta1.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Quiz</title>
+        <title>Pergunta 1</title>
         <link rel="icon" href="../../imagens/naruto.1.jpg">
         <link rel="stylesheet" href="./jogo.css">
         <link rel="stylesheet" href="../quiz.css">
     </head>
     <body>
+        <h2 class="questao"><img class="nar" src="../../imagens/giphynar.webp"></h2>
         <section>
             <h2 class="meuh2">1 - Naruto usa roupas de que cor na temporada Shippuden?</h2>
             <div class="escolhas">
