--- a/páginas/quiz/pergunta2.html
+++ b/páginas/quiz/pergunta2.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Quiz</title>
+        <title>Pergunta 2</title>
         <link rel="icon" href="../../imagens/naruto.1.jpg">
         <link rel="stylesheet" href="./jogo.css">
         <link rel="stylesheet" href="../quiz.css">
     </head>
     <body>
+        <h2 class="questao"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"></h2>
         <section>
             <h2 class="meuh2">2 - Com quem foi o primeiro beijo do Naruto?</h2>
             <div class="escolhas">
