--- a/páginas/quiz/pergunta3.html
+++ b/páginas/quiz/pergunta3.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Quiz</title>
+        <title>Pergunta 3</title>
         <link rel="icon" href="../../imagens/naruto.1.jpg">
         <link rel="stylesheet" href="./jogo.css">
         <link rel="stylesheet" href="../quiz.css">
     </head>
     <body>
+        <h2 class="questao"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"></h2>
         <section>
             <h2 class="meuh2">3 - Como Naruto descobre quem é o seu pai?</h2>
             <div class="escolhas">
@@ -17,7 +18,7 @@
                 <button type="button" id="falso1" onclick="falso111()">B - Tsunade deixa escapar em uma conversa</button>
             </div>
             <div class="escolhas">
-                <button type="button" id="escolha1"  onclick="verdade333()">C - No meio de uma transformação quase completa da Kyuubi</button>
+                <button type="button" id="escolha1"  onclick="verdade3()">C - No meio de uma transformação quase completa da Kyuubi</button>
             </div>
             <div class="escolhas">
                 <button type="button" id="falso2" onclick="falso222()">D - Orochimaru conta à ele no meio de uma luta</button>
