--- a/páginas/quiz/pergunta6.html
+++ b/páginas/quiz/pergunta6.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Quiz</title>
+        <title>Pergunta 6</title>
         <link rel="icon" href="../../imagens/naruto.1.jpg">
         <link rel="stylesheet" href="./jogo.css">
         <link rel="stylesheet" href="../quiz.css">
     </head>
     <body>
         <section>
+            <h2 class="questao"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"><img class="nar" src="../../imagens/giphynar.webp"></h2>
             <h2 class="meuh2">6 - Sarutobi Asuma foi morto por quem na temporada Shippuuden?</h2>
             <div class="escolhas">
             <button type="button" id="falso3"  onclick="falso63()">A - Deidara</button>
