--- a/páginas/quiz/fim.html
+++ b/páginas/quiz/fim.html
@@ -13,8 +13,8 @@
             <h1>O que você<br>deseja?</h1>
             <div class="opções">
                 <a href="./pergunta1.html" class="jogar">Jogar Novamente</a>
-                <a href="Pontuação.html" class="pontu">Pontuação<i class="fas fa-crown"></i></a>
-                <a href="../index.html" class="Home">Voltar ao Home</a>
+                <a href="./Pontuação.html" class="pontu">Pontuação<i class="fas fa-crown"></i></a>
+                <a href="../../index.html" class="Home">Voltar ao Home</a>
             </div>
         </div>
     </body>
